feature(tests): migrate to JUnit5 (#18)
* feat(tests): migrate to JUnit5