@@ -1,19 +1,19 @@
 package org.qubership.cloud.restlegacy.restclient.error;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.springframework.validation.Errors;
 import org.springframework.validation.MapBindingResult;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static org.junit.jupiter.api.Assertions.*;
 import static org.qubership.cloud.restlegacy.restclient.error.UtilException.*;
-import static org.junit.Assert.*;
 
-public class UtilExceptionTest {
+class UtilExceptionTest {
 
     @Test
-    public void testRethrowConsumer() {
+    void testRethrowConsumer() {
         final List<String> result = new ArrayList<>();
         result.add("test");
         result.add("test2");
@@ -30,74 +30,73 @@ public class UtilExceptionTest {
         assertEquals("test", actualResult.get(0));
     }
 
-    @Test(expected = Exception.class)
-    public void testRethrowConsumerWhenExceptionAppears() {
+    @Test
+    void testRethrowConsumerWhenExceptionAppears() {
         final List<String> result = new ArrayList<>();
         result.add("test");
         result.add("test2");
-
-        result.forEach(rethrowConsumer(element -> {
+        assertThrows(Exception.class, () -> result.forEach(rethrowConsumer(element -> {
             if ("test2".equals(element)) {
                 throw new Exception();
             }
-        }));
+        })));
     }
 
     @Test
-    public void testRethrowFunction() {
+    void testRethrowFunction() {
         final List<String> testData = new ArrayList<>();
         testData.add("test");
         testData.add("test2");
 
         List<String> actualResult = testData.stream()
                 .map(rethrowFunction(str -> str + "*"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(2, actualResult.size());
         assertEquals("test*", actualResult.get(0));
         assertEquals("test2*", actualResult.get(1));
     }
 
-    @Test(expected = Exception.class)
-    public void testRethrowFunctionWithException() {
+    @Test
+    void testRethrowFunctionWithException() {
         final List<String> testData = new ArrayList<>();
         testData.add("test");
         testData.add("test2");
 
-        testData.stream()
+        assertThrows(Exception.class, () -> testData.stream()
                 .map(rethrowFunction(str -> {
                     if ("test2".equals(str)) {
                         throw new Exception();
                     }
                     return str + "*";
                 }))
-                .collect(Collectors.toList());
+                .toList());
     }
 
     @Test
-    public void testRethrowSupplier() {
+    void testRethrowSupplier() {
         final StringJoiner stringJoiner = rethrowSupplier(() -> new StringJoiner(",")).get()
                 .add("test")
                 .add("test2");
         assertEquals("test,test2", stringJoiner.toString());
     }
 
-    @Test(expected = Exception.class)
-    public void testRethrowSupplierWithException() {
-        rethrowSupplier(() -> {
+    @Test
+    void testRethrowSupplierWithException() {
+        assertThrows(Exception.class, () -> rethrowSupplier(() -> {
             throw new Exception();
-        }).get();
+        }).get());
     }
 
     @Test
-    public void testUncheck() {
-        final Class clazz = uncheck(() -> UtilExceptionTest.class);
+    void testUncheck() {
+        final Class<UtilExceptionTest> clazz = uncheck(() -> UtilExceptionTest.class);
         assertNotNull(clazz);
         assertEquals("UtilExceptionTest", clazz.getSimpleName());
     }
 
     @Test
-    public void testUncheckRunnable() {
+    void testUncheckRunnable() {
         List<String> list = new ArrayList<>();
         uncheck(() -> {
             list.add("test");
@@ -107,43 +106,43 @@ public class UtilExceptionTest {
     }
 
     @Test
-    public void testUncheckFunction() {
-        final Class clazz = uncheck(() -> UtilExceptionTest.class);
+    void testUncheckFunction() {
+        final Class<UtilExceptionTest> clazz = uncheck(() -> UtilExceptionTest.class);
         assertNotNull(clazz);
         assertEquals("UtilExceptionTest", clazz.getSimpleName());
     }
 
-    @Test(expected = Exception.class)
-    public void testUncheckFunctionWithException() {
-        uncheck((classForName -> {
-            Class clazzTmp = Class.forName("org.qubership.cloud.microserviceframework.error.UtilExceptionTest");
+    @Test
+    void testUncheckFunctionWithException() {
+        assertThrows(Exception.class, () -> uncheck((classForName -> {
+            Class<?> clazzTmp = Class.forName("org.qubership.cloud.microserviceframework.error.UtilExceptionTest");
             if ("UtilExceptionTest".equals(clazzTmp.getSimpleName())) {
                 throw new Exception();
             }
             return clazzTmp;
-        }), "org.qubership.cloud.microserviceframework.error.UtilExceptionTest");
-    }
-
-    @Test(expected = Exception.class)
-    public void testUncheckRunnableWithException() {
-        uncheck(() -> {
-            throw new Exception();
-        });
-    }
-
-    @Test(expected = Exception.class)
-    public void testUncheckWithException() {
-        uncheck(() -> {
-            Class clazzTmp = Class.forName("org.qubership.cloud.microserviceframework.error.UtilExceptionTest");
-            if ("UtilExceptionTest".equals(clazzTmp.getSimpleName())) {
-                throw new Exception();
-            }
-            return clazzTmp;
-        });
+        }), "org.qubership.cloud.microserviceframework.error.UtilExceptionTest"));
     }
 
     @Test
-    public void testRejectConsumer() {
+    void testUncheckRunnableWithException() {
+        assertThrows(Exception.class, () -> uncheck(() -> {
+            throw new Exception();
+        }));
+    }
+
+    @Test
+    void testUncheckWithException() {
+        assertThrows(Exception.class, () -> uncheck(() -> {
+            Class<?> clazzTmp = Class.forName("org.qubership.cloud.microserviceframework.error.UtilExceptionTest");
+            if ("UtilExceptionTest".equals(clazzTmp.getSimpleName())) {
+                throw new Exception();
+            }
+            return clazzTmp;
+        }));
+    }
+
+    @Test
+    void testRejectConsumer() {
         Errors errors = new MapBindingResult(new HashMap<>(), "testObject");
         final List<String> testData = new ArrayList<>();
         testData.add("test");
@@ -155,7 +154,7 @@ public class UtilExceptionTest {
     }
 
     @Test
-    public void testRejectConsumerWithException() {
+    void testRejectConsumerWithException() {
         Errors errors = new MapBindingResult(new HashMap<>(), "testObject");
         final List<String> testData = new ArrayList<>();
         testData.add("test");
@@ -182,10 +181,10 @@ public class UtilExceptionTest {
     }
 
     @Test
-    public void testRejectFunction() {
+    void testRejectFunction() {
         Errors errors = new MapBindingResult(new HashMap<>(), "testObject");
         List<String> data = Collections.singletonList(UtilExceptionTest.class.getName());
-        List<Class> classes = data.stream()
+        List<Class<?>> classes = data.stream()
                 .map(rejectFunction(errors, Class::forName))
                 .collect(Collectors.toList());
         assertEquals(1, classes.size());
@@ -193,27 +192,18 @@ public class UtilExceptionTest {
     }
 
     @Test
-    public void testRejectFunctionWithExceptions() {
+    void testRejectFunctionWithExceptions() {
         Errors errors = new MapBindingResult(new HashMap<>(), "testObject");
         final List<String> testData = new ArrayList<>();
         testData.add("test");
         testData.add("test2");
         testData.add("test3");
-        List<Class> classes = testData.stream()
-                .map(rejectFunction(errors, str -> {
-                    switch (str) {
-                        case "test": {
-                            return UtilExceptionTest.class;
-                        }
-                        case "test2": {
-                            throw new ErrorException(new Exception(), ErrorType.INTERNAL_SERVER_ERROR);
-                        }
-                        case "test3": {
-                            throw new ProxyErrorException(new Exception(), "some-test-url");
-                        }
-                        default:
-                            return null;
-                    }
+        List<Class<?>> classes = testData.stream()
+                .map(rejectFunction(errors, str -> switch (str) {
+                    case "test" -> UtilExceptionTest.class;
+                    case "test2" -> throw new ErrorException(new Exception(), ErrorType.INTERNAL_SERVER_ERROR);
+                    case "test3" -> throw new ProxyErrorException(new Exception(), "some-test-url");
+                    default -> null;
                 }))
                 .collect(Collectors.toList());
 
